# cross_pictures

./: .gitignore  README.md  pyproject.toml
src/cross_pictures/: config.py  main.py
src/cross_pictures/model/: inference.py  loader.py
src/cross_pictures/preprocessing/: image.py
src/cross_pictures/route/: api.py
tests/: test_health_api.py  test_infer_api.py  test_preprocessing.py
