[project]
name = "cross-pictures"
version = "0.1.0"
description = ""
authors = [
    {name = "AnaSofia94",email = "anasofiamoreira94@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "cross_pictures", from = "src"}]

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "0.122.0"
uvicorn = "0.38.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
